--- a/my.html
+++ b/my.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>소개 및 연락처 - 한빈's Portfolio</title>
+    <title>프로필 & 프로젝트 - 한빈's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* 반응형 이미지 스타일 */
+      @media (max-width: 480px) {
+        img {
+          max-width: 100% !important;
+          height: auto !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -16,29 +25,91 @@
       <h1>📝 한빈's Portfolio</h1>
       <nav>
         <a href="index.html">메인</a>
-        <a href="projects.html">프로젝트</a>
-        <a href="my.html">나의 프로필</a>
+        <a href="my.html">나의 프로필 & 프로젝트</a>
         <a href="secon.html">SECON 후기</a>
         <a href="team.html">팀 프로젝트</a>
       </nav>
     </header>
     <main>
-      <section class="container">
-        <h2>나의 프로필</h2>
-        <p>
-          안녕하세요! 저는 [당신의 이름]입니다. 컴퓨터 공학을 전공하며 웹 개발과
-          알고리즘에 열정을 가지고 있습니다.
+      <br/><br/>
+      <section class="my-container">
+        <h2 class="my-h2">😊나의 프로필</h2>
+        <img src="images/me_2.jpg" alt="me_2" style="max-width: 400px; height: 460px; border: 3px solid rgb(0, 0, 0); 
+        float: right; margin-right: 50px; margin-top: 70px;" />
+        <p style="font-weight: 800">자기소개</p>
+        <ul>
+          <li>이름: 박한빈</li>
+          <li>학과: 정보보호학과</li>
+          <li>학번: 22학번</li>
+          <li>MBTI: infp</li>
+        </ul>
+        <p style="font-weight: 800">취미</p>
+        <ul>
+          <li>일렉기타🎸 / 드라이브🚗 / 요리🍳</li>
+        </ul>
+        <p style="font-weight: 700">📧 이메일: han122400@gmail.com</p>
+        <p style="font-weight: 700">
+          💾 GitHub:
+          <a href="https://github.com/han122400" target="_blank"
+            >https://github.com/han122400</a>
         </p>
-        <p>이메일: your.email@example.com</p>
-        <p>
-          GitHub:
-          <a href="https://github.com/your-username" target="_blank"
-            >github.com/your-username</a
-          >
+        <p style="font-weight: 700">
+          📝 블로그:
+          <a href="https://blog.naver.com/han122400" target="_blank"
+            >https://blog.naver.com/han122400</a>
         </p>
-        <!-- 실제 이메일과 GitHub URL로 교체하세요 -->
+        <p style="font-weight: 700">📞 전화번호: 010-9737-1732</p>
       </section>
+      <br/><br/><br/>
+
+      <section class="my-container">
+        <h2 class="my-h2">🧐나의 활동</h2>
+        <p style="font-weight: 700">멋쟁이 사자처럼 13기</p>
+        <ul>
+          <li>2025~현재</li>
+        </ul>
+        <img src="images/lion.png" alt="Lion Image" style="max-width: 350px; height: 190px; border: 3px solid orange; 
+        float: right; margin-right: 30px; margin-top: -180px;" />
+        <br/>
+      </section>
+      <br/><br/><br/>
+
+      <section class="my-container">
+        <h2 class="my-h2">🚀 나의 관심분야 & 목표</h2>
+        <p style="font-weight: 700">풀스택+AI 개발자</p>
+        <ul>
+          <li>풀스택 개발과 AI를 함께 공부하는 것은 미래를 대비하는 전략적인 선택입니다.<br/>
+            단순한 코딩만으로는 AI의 발전 속도를 따라가기 어렵지만, AI를 이해하고 활용하는 개발자는 오히려 AI를 도구로 삼아 더 혁신적인 서비스를 만들 수 있습니다.
+            </li>
+        </ul>
+        <br/>
+      </section>
+      <br/><br/><br/>
+
+      <section class="my-container">
+        <h2 class="my-h2">📚 나의 스택</h2>
+        <p>다양한 언어와 프레임워크를 배우는 중입니다...😅</p>
+        <ul>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Python, C, Java</li>
+          <li>opencv를 활용한 영상분석</li>
+          <li>정보보안 관련 기술</li>
+        </ul>
+        <br/>
+      <section class="my-container">
+        <h2 class="my-h2">💻 나의 프로젝트</h2>
+        <p>지금은 별로 한 것이 없지만 앞으로 많은 프로젝트를 하고 싶습니다.</p>
+        <ul>
+          <li>프로젝트 1: <a href="https://github.com/han122400/Web_HTML_0405" target="_blank"
+            >웹 맛보기</a></li>
+          <li>프로젝트 2: <a href="https://github.com/han122400/HCJDEMO" target="_blank"
+            >웹 팀플</a></li>
+        </ul>
+      </section>
+      <br/>
+
     </main>
+    <br/>
     <footer>
       <p>© 2025 한빈's Portfolio</p>
     </footer>
