--- a/team.html
+++ b/team.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>팀 - 한빈's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      /* 반응형 이미지 스타일 */
+      @media (max-width: 480px) {
+        img {
+          max-width: 100% !important;
+          height: auto !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -16,25 +25,48 @@
       <h1>📝 한빈's Portfolio</h1>
       <nav>
         <a href="index.html">메인</a>
-        <a href="projects.html">프로젝트</a>
-        <a href="my.html">나의 프로필</a>
+        <a href="my.html">나의 프로필 & 프로젝트</a>
         <a href="secon.html">SECON 후기</a>
         <a href="team.html">팀 프로젝트</a>
       </nav>
     </header>
+    <br/><br/>
     <main>
-      <section class="container">
-        <h2>팀 프로젝트</h2>
-        <p>
-          저희 팀은 [프로젝트 이름]을 진행했습니다. 이 프로젝트는 [프로젝트 간단
-          설명]을 목표로 했습니다.
-        </p>
-        <h3>팀원 소개</h3>
-        <ul>
-          <li>[팀원1 이름]: [역할, 간단 소개]</li>
-          <li>[팀원2 이름]: [역할, 간단 소개]</li>
-          <!-- 추가 팀원 -->
-        </ul>
+      <section class="my-container">
+        <h2 class="my-h2">팀명: CMD (코딩 마스터 다요)</h2>
+        <img src="images/team_web.png" alt="team_web" style="max-width: 350px; height: 200px; border: 3px solid rgb(0, 0, 0); 
+        float: right; margin-right: 30px; margin-top: 70px;" />
+        <p style="font-weight: 700">
+          팀 프로젝트 주제 : 생성형 AI란?</p>
+        <p>생성형 AI를 설명하는 웹페이지를 제작하였습니다</p><br/>
+        <p>📜 <a href="https://cmdproject.vercel.app/" target="_blank"
+          >사이트 바로가기</a></p>
+        <br/>
+      </section>
+      <br/><br/><br/>
+      <section class="my-container">
+        <h2 class="my-h2">👨‍👨‍👦팀원 소개</h2>
+        <p style="font-weight: 700">이미지를 클릭하면 깃허브로 연결됩니다 (*^_^*)</p>
+        <div style="display: flex; justify-content: space-around;">
+          <div style="text-align: center;">
+            <a href="https://github.com/han122400" target="_blank">
+              <img src="images/team_1.png" alt="박한빈" style="width: 250px; height: 250px; border-radius: 10px;">
+            </a>
+            <p>이름: 박한빈(👑조장)<br>학번: 92212867</p>
+          </div>
+          <div style="text-align: center;">
+            <a href="https://github.com/Daru0613" target="_blank">
+              <img src="images/team_2.png" alt="김서진" style="width: 250px; height: 250px; border-radius: 10px;">
+            </a>
+            <p>이름: 김서진<br>학번: 92212764</p>
+          </div>
+          <div style="text-align: center;">
+            <a href="https://github.com/dlwpgur03" target="_blank">
+              <img src="images/team_3.png" alt="이제혁" style="width: 250px; height: 250px; border-radius: 10px;">
+            </a>
+            <p>이름: 이제혁<br>학번: 92212996</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
